--- a/careers.html
+++ b/careers.html
@@ -132,7 +132,7 @@ permalink: /careers/
             <div class="row" style="margin-top: 80px;margin-left: 0px;margin-right: 0px;">
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                     <p class="text-left work-life mb-2">Self-Development</p>
-                    <p class="text-left work-life-two">It’s something that we need to do, and this is what we do. We develop new skills, qualities, abilities, traits that are available and we personally develop by taking responsibility for ourselves. At Incodeks we find our strengths and we develop our strengths so much that the weakness disappears by setting smart, measurable, clear and concise goals.</p>
+                    <p class="text-left work-life-two">It’s something that we need to do, and this is what we do. We develop new skills, qualities, abilities, traits that are available and we personally develop by taking responsibility for ourselves. At Starkos we find our strengths and we develop our strengths so much that the weakness disappears by setting smart, measurable, clear and concise goals.</p>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center">
                     <p  class="text-left work-life mb-2">Work-Life balance</p>
@@ -149,7 +149,7 @@ permalink: /careers/
        <div class="container youtube_iframe_video ">
             <iframe width="100%" height="515" src="https://www.youtube.com/embed/xAGwkGvS-N8?controls=0&autohide=2&modestbranding=1&showinfo=1" controls="0" rel="0" title="YouTube video player"  frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <p class="text-left mt-4">
-                We enjoy what we do just as much as we enjoy working with each other. Incodeks honours the value in human and emotional intelligence, not just artificial intelligence. Cultivating a healthy, joyful working environment fuels our mission towards establishing a successful, long-lasting partnership with one another. Join a collaborative and supportive team that continuously learns and grows together towards a common goal- creating a better, progressive future for everyone.
+                We enjoy what we do just as much as we enjoy working with each other. Starkos honours the value in human and emotional intelligence, not just artificial intelligence. Cultivating a healthy, joyful working environment fuels our mission towards establishing a successful, long-lasting partnership with one another. Join a collaborative and supportive team that continuously learns and grows together towards a common goal- creating a better, progressive future for everyone.
             </p>
        </div>
     </div>
@@ -173,14 +173,14 @@ permalink: /careers/
                         <img class="" src="{{ site.baseurl }}/assets/img/plus.png">
                         <p  class="first-benefits mt-2 mb-2 ml-2">Health Insurance<br></p>
                     </div>
-                    <p class="second-benefits" >Incodeks provides a full coverage health insurance policy. As the most important thing that saves employees money in health care by including annual care, emergency care, and prescription medication care. Even if they don’t call the doctor, getting sick or accidents can happen so it's best to be prepared.  It helps our employees stay healthy by doing regular tests, check-ups, screenings and so on that later help prevent serious illness. Our human capital matters the most.</p>
+                    <p class="second-benefits" >Starkos provides a full coverage health insurance policy. As the most important thing that saves employees money in health care by including annual care, emergency care, and prescription medication care. Even if they don’t call the doctor, getting sick or accidents can happen so it's best to be prepared.  It helps our employees stay healthy by doing regular tests, check-ups, screenings and so on that later help prevent serious illness. Our human capital matters the most.</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-4">
                     <div class="career-item-flex">
                         <img class="" src="{{ site.baseurl }}/assets/img/watch.png">
                         <p class="text-left first-benefits mt-2 mb-2 ml-2">Flexible Hours<br></p>
                     </div>
-                    <p class="text-left second-benefits">Being flexible depends on job requirements and our daily schedule. The standard work schedule is known worldwide now, usually it is from 9 a.m. to 5 p.m. Monday to Friday, but, @Incodeks, we pay attention to the tasks we do and what we deliver. Working hours are flexible and we deliver what we promise. Our team is always willing to assist and support in condensed workweeks, cover overloaded work while their colleagues are on leave, adapting fast to the new circumstances that may arise due to the complexity of the work. Hence, flexibility helps to increase engagement, productivity and loyalty.</p>
+                    <p class="text-left second-benefits">Being flexible depends on job requirements and our daily schedule. The standard work schedule is known worldwide now, usually it is from 9 a.m. to 5 p.m. Monday to Friday, but, @Starkos, we pay attention to the tasks we do and what we deliver. Working hours are flexible and we deliver what we promise. Our team is always willing to assist and support in condensed workweeks, cover overloaded work while their colleagues are on leave, adapting fast to the new circumstances that may arise due to the complexity of the work. Hence, flexibility helps to increase engagement, productivity and loyalty.</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-4">
                     <div class="career-item-flex">
@@ -203,7 +203,7 @@ permalink: /careers/
                 </div>
 
                 <div class="col-md-12">
-                    <p class="text-left workplace-paragraph-first mt-5">Send us email at <a href="mailto: info@incodeks.com" class="color-primary"> info@incodeks.com </a><br>or visit our offices.</p>
+                    <p class="text-left workplace-paragraph-first mt-5">Send us email at <a href="mailto: info@starkos.com" class="color-primary"> info@starkos.com </a><br>or visit our offices.</p>
                 </div>
  
             </div>
