--- a/estimate.html
+++ b/estimate.html
@@ -23,7 +23,7 @@ permalink: /estimate/
                 </div>
                 <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 col-12 text-sm-left text-md-left text-lg-center text-xl-center" style="padding-right: 0px;padding-left: 0px;">
                     <p class="p3">We'll get back to you in 24 hours with our proposed&nbsp;<br>plan or questions for your project.</p>
-                    <p class="p4">Write us at hello&nbsp;<a href="#" style="color: blue;font-weight: bold;">incodeks.com</a></p>
+                    <p class="p4">Write us at hello&nbsp;<a href="#" style="color: blue;font-weight: bold;">starkos.com</a></p>
                 </div>
             </div>
         </div>
