--- a/services.html
+++ b/services.html
@@ -24,49 +24,49 @@ permalink: /services/
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">End-to-End Project Management</p>
-                        <p class="text-left provide-p2">We provide:</p>
-                        <p class="text-left provide-p3">Conceptualization to completion<br>Streamlined processes<br>
-                          Efficient execution<br>
-                          Holistic approach<br> </p>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">Advanced Engineering Solutions<br></p>
-                        <p class="text-left provide-p2"><strong>We provide:</strong><br></p>
-                        <p class="text-left provide-p3">Cutting-edge technology integration<br>
-                          Modern methodologies<br>
-                          Solution-driven approach<br>
-                         Expertise in various engineering sectors<br> </p>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">Procurement Excellence</p>
-                        <p class="text-left provide-p2">We provide:</p>
-                        <p class="text-left provide-p3">Vast supplier network<br>
-                          Competitive pricing<br>
-                          Quality material sourcing<br>
-                          Strategic vendor partnerships<br></p>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">Sustainable Construction</p>
-                        <p class="text-left provide-p2">We provide:</p>
+                        <p class="text-left provide-p1">Procurement:</p> 
                         <p class="text-left provide-p3">
-                          Eco-friendly practices<br>Energy-efficient building methods<br>
-                         Compliance with green standards<br>Long-term sustainable impact<br> </p>
+                            Strategic process of acquiring goods and services to meet project needs<br>
+Involves supplier identification, negotiation, budgeting, purchase orders/contracts<br>
+Ensures proper quantity, quality, timing and pricing in purchasing</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Purchasing<br></p> 
+                        <p class="text-left provide-p3">
+                            Function responsible for buying needed goods/services<br>
+                            Manages transactions with suppliers and processes purchase orders<br>
+                            Oversees procurement process and supplier relationships<br>
+                        </p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Contracting</p> 
+                        <p class="text-left provide-p3">
+                          Creates legally binding agreements for purchase of goods/services<br>
+                          Outlines terms, responsibilities, pricing, timelines, quality standards<br>
+                          Important for mitigating risk and ensuring accountability<br>
+                        </p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Subcontracting</p> 
+                        <p class="text-left provide-p3">
+                         Hiring external company to perform portion of existing contract<br>
+                         Used to offset capacity constraints or access specialized skills<br>
+                         Requires management of pricing, quality, timing, performance<br> </p>
                     </div>
 
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">Customized Contracting Services</p>
-                        <p class="text-left provide-p2">We provide:</p>
+                        <p class="text-left provide-p1">Expediting</p> 
                         <p class="text-left provide-p3">
-                          Tailored contracting models<br>Flexibility in approach<br>
-                         Aligned with client objectives<br>Efficient and transparent terms<br> </p>
+                         Tracking and following up on orders to ensure on-time delivery<br>
+                         Involves managing procurement documentation, logistics, inventory<br>
+                         Critical for projects with tight timelines<br> </p>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
-                        <p class="text-left provide-p1">Quality Assurance & Safety</p>
-                        <p class="text-left provide-p2">We provide:</p>
+                        <p class="text-left provide-p1">Document Control</p> 
                         <p class="text-left provide-p3">
-                          Global quality standards<br>Rigorous safety protocols<br>
-                         Regular quality checks<br>Commitment to excellence and protection<br> </p>
+                         Manages distribution, access and integrity of documents<br>
+                         Ensures use of correct document versions<br>
+                         May involve logging, indexing, approvals, auditing<br> </p>
                     </div>
               </div>
             </div>
