--- a/services.html
+++ b/services.html
@@ -68,6 +68,61 @@ Ensures proper quantity, quality, timing and pricing in purchasing</p>
                          Ensures use of correct document versions<br>
                          May involve logging, indexing, approvals, auditing<br> </p>
                     </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Engineering & Design</p> 
+                        <p class="text-left provide-p3">
+                        Technical and creative planning necessary before the construction phase.<br> 
+                        Includes specifications, drawings, and overall design integrity.<br>  </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Equipment & Material</p> 
+                        <p class="text-left provide-p3">
+                         Focus on the physical components needed for the project.<br>
+                         Ensures equipment and materials meet technical specifications.<br>  </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Direct & Indirect Costs</p> 
+                        <p class="text-left provide-p3">
+                         Management of all costs associated with the project.<br>
+                         Direct costs: Directly tied to project deliverables.<br>
+                         Indirect costs: Not directly chargeable to the project (e.g., administration).<br> </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Front-End Loading (FEL)</p> 
+                        <p class="text-left provide-p3">
+                         Strategic planning and design early in the project lifecycle.<br>
+                         Develops the business case, feasibility studies, and concept development.<br> </p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Startup</p> 
+                        <p class="text-left provide-p3">
+                        Activities to transition from construction completion to operational status.<br>
+                        Involves commissioning, testing, and initial operations.<br> </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Protection to Operation</p> 
+                        <p class="text-left provide-p3">
+                        Protecting the operation through maintenance and asset management.<br>
+                        Ensures operational efficiency, safety, and productivity post-completion.<br> </p>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Safety</p> 
+                        <p class="text-left provide-p3">
+                        Ensuring all project activities adhere to the highest safety standards.<br> 
+                        Includes planning, risk assessments, training, and emergency response.<br>  </p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-5">
+                        <p class="text-left provide-p1">Contingencies</p> 
+                        <p class="text-left provide-p3">
+                       Planning for unexpected events that could impact the project.<br> 
+                        Involves risk management and having contingency plans in place.<br>  </p>
+                    </div>
               </div>
             </div>
 
