--- a/services.html
+++ b/services.html
@@ -121,65 +121,12 @@ Ensures proper quantity, quality, timing and pricing in purchasing</p>
                         <p class="text-left provide-p1">Contingencies</p> 
                         <p class="text-left provide-p3">
                        Planning for unexpected events that could impact the project.<br> 
-                        Involves risk management and having contingency plans in place.<br>  </p>
+                        wInvolves risk management and having contingency plans in place.<br>  </p>
                     </div>
               </div>
             </div>
 
         </section>
-
-<!--         <section class="section bg-white testimonials-section" style="padding: 50px 0 !important;">
-            <div class="container">
-    
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12" style="margin-bottom: 50px;">
-                        <p class="text-center services_clients_title">Our clients keep saying some<br>super nice stuff.</p>
-                    </div>
-                </div>
-    
-                <div class="row text-center first-service-row">
-                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-                        <div class="first-service-col bg-blue-light">
-                            <img src="{{ site.baseurl }}/assets/img/testimonials/ravi_kurani.jpg">
-                            <p class="text-left service-p1 mb-3 mt-2">
-                            "We have been working with Incodeks for the last 3 years. It was a great decision to work with them and we are very pleased with the results so far. The team is professional, easy to work with and flexible. They have done an excellent job in building our platform from scratch and we are very happy with it."
-                            </p>
-                            <p class="text-left d-inline service-p2">
-                            Ravi Kurani, MySutro
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-                        <div class="first-service-col bg-blue-dark">
-                                <img src="{{ site.baseurl }}/assets/img/testimonials/steven.jpg">
-                                <p class="text-left service-p1 mb-3 mt-2">
-                                    "Incodeks is a pleasure to work with.
-                                    From beginning to end they go above and beyond to see your vision through and make important and priceless contributions to your project.
-                                    They suggest things you may have never thought about and show you how certain features will allow you to scale and grow naturally over time.
-                                    The team will not stop until the project is completed to your 100% satisfaction.
-                                    We value Incodeks as a crucial extension of our company and would highly recommend them to anyone looking for a great development team who will put you first!"
-                                </p>
-                                <p class="text-left d-inline service-p2">
-                                    Steven Stanimirovic, VQ Fluux
-                                </p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
-                        <div class="first-service-col bg-grey-light">
-                                <img src="{{ site.baseurl }}/assets/img/testimonials/zack.png">
-                                <p class="text-left service-p1 mb-3 mt-2">
-                                    "Working with Incodeks has been everything House Rewards needed when we were looking for a partner to build out our platform. The team at Incodeks is incredibly talented, hard-working, and very responsive at all times. Highly recommend it! 
-                                    Faster turnaround times, faster user experience."
-                                </p>
-                                <p class="text-left d-inline service-p2">
-                                    Zack Arenson, House Rewards
-                                </p>
-                        </div>
-                    </div>
-            </div>
-        </section> -->
 
         <section id="provide" class="section">
            <div class="pt-3 pb-3" style="background: #f9f9f9;">
